Add application.properties without secrets

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,8 +8,5 @@ spring.jpa.show-sql=true
 
 #spring.security.user.name=abhisek
 #spring.security.user.password=Mama@18520
-
-
-#spring.security.oauth2.client.registration.google.client-id=745998686480-59025mok3g05r11je4p66td0h2uu5fj8.apps.googleusercontent.com
-
-#spring.security.oauth2.client.registration.google.client-secret=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
+spring.security.oauth2.client.registration.google.client-id=${GOOGLE_CLIENT_ID}
+spring.security.oauth2.client.registration.google.client-secret=${GOOGLE_CLIENT_SECRET}
